# gh-weekly-updates

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/gh_weekly_updates/: __init__.py  cli.py  collector.py  config.py  contributions.py  models.py  publisher.py  summariser.py
tests/: __init__.py  test_cli.py  test_config.py  test_models.py  test_summariser.py
