[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-weekly-updates"
version = "0.1.3"
description = "Automatically discover and summarise your weekly GitHub impact"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sahan Serasinghe", email = "sahan.serasinghe@gmail.com"},
]
keywords = ["github", "weekly", "impact", "summary", "engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/sahansera/gh-weekly-updates"
Repository = "https://github.com/sahansera/gh-weekly-updates"
Issues = "https://github.com/sahansera/gh-weekly-updates/issues"
Changelog = "https://github.com/sahansera/gh-weekly-updates/blob/main/CHANGELOG.md"

[project.scripts]
gh-weekly-updates = "gh_weekly_updates.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.setuptools.packages.find]
where = ["src"]
